fix: Fixed registration changes, 404 page, loginpage and all the fonts should be now correct. scroll removed from every page and all spacings should now be correct as well.

--- a/src/css/404.css
+++ b/src/css/404.css
@@ -18,8 +18,12 @@
 .NotFound-h2 {
     text-align: center;
     font-family: 'Source Serif Pro';
+    font-weight: 400;
+    font-style: normal;
+    font-size: 32px;
     width: 353px;
     height: 20px;
+    margin: 0;
     margin-top: 315px;
 }
 
@@ -32,16 +36,19 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     line-height: 50px;
     background:linear-gradient(206.56deg, #51B5F3 14.94%, #1E78CD 58.66%);
+    font-family: 'League Spartan';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
     color: #FFF;
     text-decoration: none;
     border-radius: 50px;
-    font-family: 'League Spartan', sans-serif;
-    font-size: 24px;
     border: none;
     cursor: pointer;
-    margin-top: 42px;
+    margin-top: 60px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     transition: background-color 0.3s;
+    flex-grow: 0;
 }
 
 .NotFound-Link:active {
