--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,34 +1,48 @@
 .loginForm-container {
     background: linear-gradient(#fff, #84CCF8);
-    height: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .loginForm-container h1 {
     font-size: 32px;
-    font-family: 'Source Serif Pro';
     text-align: center;
-    padding-top: 96px;
+    font-family: 'Source Serif Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    margin: 0;
+    margin-top: 60px;
+    margin-bottom: 40px;
 }
 
 .login-container {
-    margin-top: 119px;
     display: flex;
     flex-direction: column;
     width: 400px;
     max-width: calc(100% - 40px);
-    height: 100vh;
-    background: linear-gradient(194.22deg, #F8FAFC 24.58%, #E2E8F0 127.19%);
+    background: #fff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 20px 20px 0px 0px;
     margin: 0 auto;
-    margin-top: 100px;
+    align-self: flex-start;
+    flex-grow: 1;
 }
 
 .login-label-email h2,
 .login-label-password h2 {
-    font-family: 'Source Serif Pro';
-    margin-top: 45px;
+    margin: 0;
+    margin-top: 40px;
     display: flex;
+    font-family: 'Source Serif Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+.login-label-password h2 {
+    margin-top: 20px;
 }
 
 .login-label-email,
@@ -40,10 +54,11 @@
 }
 
 .login-input {
+    font-family:'Source Serif Pro';
     font-size: 15px;
     background: none;
     color: #94A3B8;
-    margin-top: 43px;
+    margin-top: 20px;
     border: none;
     width: 100%;
     border-bottom: 1px solid #94A3B8;
@@ -70,14 +85,24 @@
     font-family: 'League Spartan', sans-serif;
     border: none;
     cursor: pointer;
-    margin-top: 20px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     margin-left: 20px;
     margin-right: 20px;
 }
 
+.moodle-login-btn {
+    margin-top: 20px;
+}
+
+.login-btn:focus,
+.signup-btn:focus,
+.moodle-login-btn:focus {
+    outline: none;
+    box-shadow: none;
+}
+
 .login-btn {
-    margin-top: 72px;
+    margin-top: 40px;
 }
 
 .login-options-separator {
@@ -94,6 +119,8 @@ background: linear-gradient(206.56deg, #E96093 14.94%, #B5245C 58.66%);
 .signup-btn:active {
     background: linear-gradient(206.56deg, #0f406d 14.94%, #275673 58.66%);
     transform: translateY(4px);
+    outline: none;
+    box-shadow: none;
 }
 
 .signup-btn:active {
@@ -105,4 +132,26 @@ background: linear-gradient(206.56deg, #E96093 14.94%, #B5245C 58.66%);
     justify-content: center;
     align-items: center;
     width: 100%;
+}
+
+/* Media query for screens wider than 1024px */
+@media (min-width: 1025px) {
+    .login-container {
+        border-radius: 20px;
+        min-height: 600px;
+        margin-bottom: 500px;
+        margin-top: 40px;
+    }
+
+    .loginForm-container h1 {
+        margin-top: 200px;
+    }
+}
+
+@media (max-width: 375px) {
+    .loginForm-container h1 {
+        margin: 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    }
 }
